testdata/language-features/basic-list/list14.reject.out
type error: can not unify
[32m'List 'Char[0m
with
[32m()[0m

in testdata/language-features/basic-list/list14.reject.lc:1:17:
value = 'h':'i':()
                ^^
------------ trace
!type error: can not unify
[32m'List 'Char[0m
with
[32m()[0m

in testdata/language-features/basic-list/list14.reject.lc:1:17:
value = 'h':'i':()
                ^^
------------ tooltips
testdata/language-features/basic-list/list14.reject.lc 1:9-1:12
    Char
testdata/language-features/basic-list/list14.reject.lc 1:9-1:13
    List Char -> List Char
testdata/language-features/basic-list/list14.reject.lc 1:12-1:13
    forall a . a -> List a -> List a
testdata/language-features/basic-list/list14.reject.lc 1:13-1:16
    Char
testdata/language-features/basic-list/list14.reject.lc 1:13-1:17
    List Char -> List Char
testdata/language-features/basic-list/list14.reject.lc 1:16-1:17
    forall a . a -> List a -> List a
testdata/language-features/basic-list/list14.reject.lc 1:17-1:19
    ()